[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'

[tool.poetry]
name = "thumbor_aws"
version = "0.8.0"
authors = ["Bernardo Heynemann <heynemann@gmail.com>"]
description = "thumbor_aws provides extensions for thumbor using AWS"
readme = "README.md"
license = "MIT"
keywords = ["imaging", "face", "detection", "feature", "thumbnail", "imagemagick", "pil", "opencv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Graphics :: Presentation",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
thumbor = "^7.7"
aiobotocore = "^2.0"
pycurl = "^7.44"
deprecated = "^1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5"
coverage = "^7.5"
flake8 = "^7.1"
isort = "^5.13"
preggy = "^1.4"
pylint = "^3.2"
pytest = "^8.1"
pytest-cov = "^5.0"
pytest-tldr = "^0.2.5"
pytest-xdist = "^3.6"
yanc = "^0.3.3"
pyssim = "^0.7"
numpy = [
    {version = "^1.23.5", python = "~3.8"},
    {version = "^1.26.0", python = ">=3.9"}
]
scipy = [
    {version = "^1.9.3", python = "~3.8"},
    {version = "^1.11.2", python = ">=3.9"}
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
