[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'

[tool.poetry]
name = "thumbor_aws"
version = "1.1.0"
authors = ["Bernardo Heynemann <heynemann@gmail.com>"]
description = "thumbor_aws provides extensions for thumbor using AWS"
readme = "README.md"
license = "MIT"
keywords = ["imaging", "face", "detection", "feature", "thumbnail", "imagemagick", "pil", "opencv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Graphics :: Presentation",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
thumbor = "^7.8"
aiobotocore = "^3.7"
pycurl = "^7.46"
deprecated = "^1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.6,<6.0"
coverage = "^7.14"
flake8 = "^7.3"
isort = ">=8.0,<10.0"
preggy = "^1.4"
pylint = ">=4.0,<6.0"
pytest = ">=9.1,<11.0"
pytest-cov = "^7.1"
pytest-tldr = "^0.2.6"
pytest-xdist = "^3.8"
yanc = "^0.3.3"
pyssim = "^0.7"
numpy = "^2.2"
scipy = "^1.15"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
